syntax = "proto2";

option go_package = "./protopb";

import "google/protobuf/empty.proto";

service Operations {

    // Permite hacer un ping a otro nodo enviando los datos de contacto propios
    rpc Ping (PingOperands) returns (google.protobuf.Empty);
    
    // Permite compartir contactos recomendados entre dos pares recíprocamente
    rpc ShareContactsReciprocally (ShareContactsReciprocallyOperands) returns (ShareContactsReciprocallyResults);

    // Permite enviar un bloque a ser guardado en un nodo dado
    rpc StoreBlock (StoreBlockOperands) returns (google.protobuf.Empty);
}

// Contiene los datos del contacto que hace el ping
message PingOperands {
    required bytes sourceId = 1;
    required string sourceUrl = 2;
}

// Contiene los datos del contacto fuente y los contactos recomendados para el par destino
message ShareContactsReciprocallyOperands {
    required bytes sourceId = 1;
    required string sourceUrl = 2;
    repeated bytes contactsIds = 3;
    repeated string contactsUrls = 4;
}

// Contiene los contactos recomendados por el nodo destino
message ShareContactsReciprocallyResults {
    repeated bytes contactsIds = 1;
    repeated string contactsUrls = 2;
}

// Contiene la información sobre un bloque a guardar
message StoreBlockOperands {
    required bytes sourceId = 1;
    required string sourceUrl = 2;
    required bytes key = 3;
    required string blockName = 4;
    required bytes data = 5;
}

